soketio를 연결했는데 예측을 실패함

--- a/templates/remake.html
+++ b/templates/remake.html
@@ -57,22 +57,22 @@
         <h1>RPS</h1>
         <h3 id="result">카메라를 불러오는 중입니다.</h3>
 
-        <div>
-              <video autoplay="true" id="videoElement"></video>
-              <canvas id="canvasElement" style="display:none"></canvas>
+<!--              <video autoplay="true" id="videoElement"></video>-->
+<!--              <canvas id="canvasElement" style="display:none"></canvas>-->
 
 <!--              <img id="photo">-->
-        </div>
 
-<!--        <div class="row">-->
-<!--            <div class="col">-->
-<!--                <img src="{{ url_for('video_feed') }}" width="100%">-->
-<!--            </div>-->
-<!--&lt;!&ndash;            <div class="col-sm-1">VS</div>&ndash;&gt;-->
-<!--            <div class="col">-->
-<!--                <img id="computer_hand" class="img-fluid" src="">-->
-<!--            </div>-->
-<!--        </div>-->
+
+        <div class="row">
+            <div class="col">
+                <video autoplay="true" id="videoElement"></video>
+                <canvas id="canvasElement" style="display:none"></canvas>
+            </div>
+<!--            <div class="col-sm-1">VS</div>-->
+            <div class="col">
+                <img id="computer_hand" class="img-fluid" src="">
+            </div>
+        </div>
     </div>
 
 </body>
